--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -80,6 +80,7 @@
 
 .dark {
   --background: oklch(0.145 0 0);
+  --grey: oklch(49.616% 0.00006 271.152);
   --foreground: oklch(0.985 0 0);
   --card: oklch(0.205 0 0);
   --card-foreground: oklch(0.985 0 0);
